# pipewire_graph_egui

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: app.rs  channel.rs  lib.rs  main.rs  pipewire_wrapper.rs
