[package]
name = "pipewire_graph_egui"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"

[dependencies]
eframe = { version = "0.19.0", features = ["persistence"] }
egui_node_graph = { version = "0.4.0", features = ["persistence"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
pipewire = { path = "./thirdparty/pipewire-rs/pipewire" }
